CSS and HTML Refactor

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         
     </head>
     <body>
-        <h1 id="title">🤖 BoredBot 🤖</h1>
-        <h4 id="idea">Find something to do</h4>
-        <button id="bored-button"></button>
+        <main id="activity-container" class="activity-container">
+            <h1 id="title">🤖 BoredBot 🤖</h1>
+            <h4 id="idea">Find something to do</h4>
+            <button id="bored-button"></button>
+        </main>
         <script src="index.js"></script>
     </body>
 </html>
